# ids-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
script/: download_data.py
src/: URL.py  __init__.py
src/ids_py/: __init__.py
src/ids_py/data/: IDS_characters_composition.json  IDS_data.txt
test/: test.py
