[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ids-py"
description = "A Python front end to the IDS database"
readme = "README.md"
authors = [
    { name = "Gaëtan Baehr", email = "gaetan.baehr@black-foundry.com" }
]
keywords = ["ids", "hanzi", "han", "characters", "composition", "unicode"]
license = {text = "GNU General Public License v3"}
dependencies = ["fonttools"]
dynamic = ["version"]
requires-python = ">=3.8"


[project.urls]
Documentation = "https://github.com/BlackFoundryCom/ids-py#readme"
Issues = "https://github.com/BlackFoundryCom/ids-py/issues"
Source = "https://github.com/BlackFoundryCom/ids-py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ids_py/_version.py"
